# audiogear

./: .gitignore  README.md  SKILL.md  pyproject.toml
configs/: resd.yaml
configs/metric/: gigaam_multilingual.yaml  gigaam_v3.yaml  pitch.yaml
examples/: qa_report.py
src/audiogear/: audio.py
src/audiogear/pipeline/metrics/: gigaam_v3.py  pitch.py
tests/: test_punct_transfer.py
