[project]
name = "audiogear"
version = "0.1.0"
description = "A configurable pipeline for preparing and annotating speech datasets for TTS (audio feature/metric extraction, filtering, transcription, speaker labeling)."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
authors = [{ name = "audiogear" }]
keywords = ["tts", "speech", "audio", "data", "dataset", "annotation", "pipeline"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    # pipeline core
    "fsspec>=2023.12.2",
    "tqdm>=4.66.1",
    "loguru>=0.7.0",
    "multiprocess",
    "pydub==0.25.1",
    "python-dotenv>=1.0.0",
    # data / audio io
    "numpy",
    "pandas>=2.0",
    "soundfile>=0.12",
    "librosa>=0.10.1",
    "numba>=0.59",  # avoid librosa pulling an ancient numba incompatible with py3.11/3.12
    # ml core (models live behind metric blocks).
    # Capped <2.6: originally forced by gigaam's torchaudio<=2.5.1 pin; gigaam
    # 0.2 (git) dropped that pin, but 2.5.x remains what this stack is tested
    # against — lift the cap only after revalidating pyannote/transformers.
    # Consequence: transformers refuses to torch.load non-safetensors
    # checkpoints (CVE-2025-32434), so transformers-based ASR backends must use
    # safetensors.
    "torch>=2.4,<2.6",
    "torchaudio>=2.4,<2.6",
    # transformers<5 + huggingface-hub<1: pyannote.audio 3.x calls the
    # use_auth_token kwarg that huggingface-hub 1.x removed; transformers 5.x
    # requires hub 1.x. The 4.x/0.x combo keeps pyannote (brouhaha, speaker
    # embedding, diarization) working.
    "transformers>=4.40,<5",
    "huggingface-hub>=0.23,<1.0",
    # configuration
    "hydra-core>=1.3",
    "omegaconf>=2.3",
]

[project.optional-dependencies]
# --- metric backends (heavy / optional) ---
# brouhaha SNR/C50: the regressive VAD pipeline is vendored under
# pipeline/metrics/models/brouhaha_vad.py, so only pyannote.audio is needed.
brouhaha = ["pyannote.audio>=3.1,<4", "scikit-learn>=1.3"]
pitch = ["penn>=1.0", "torchcrepe>=0.0.22"]
mos = ["distillmos>=0.9"]
# gigaam from git: PyPI is stuck at 0.1.0 (v2-era — no v3/e2e, no multilingual,
# hard torch<=2.5.1 pin). 0.2.x adds v3 + multilingual models, word timestamps,
# batched RNNT decode and a batched-encoder padding fix; pinned to a commit for
# reproducibility.
asr = [
    "gigaam @ git+https://github.com/salute-developers/GigaAM@559d88d6b72541412743929f633a6ae7c9950b85",
    "faster-whisper>=1.0",
    "jiwer>=3.0",
]
# T-one (t-tech) streaming Conformer-CTC Russian ASR. PyPI `tone` is a name-squat,
# so pull the real package from git (`--extra tone`):
tone = ["tone @ git+https://github.com/voicekit-team/T-one.git"]
diarization = ["pyannote.audio>=3.1,<4", "scikit-learn>=1.3"]
ru = ["phonemizer>=3.2"]
# --- infra ---
s3 = ["s3fs>=2023.12.2"]
dev = ["ruff>=0.4", "pytest>=8.0", "moto[s3,server]"]
# convenience: everything needed for the default Russian TTS pipeline.
# NOTE: `uv sync --extra X` makes the venv match EXACTLY base+X and UNINSTALLS
# every other extra. To add one extra without losing the rest, sync them all at
# once, e.g.  uv sync --extra ru-pipeline --extra tone  (tone pulls from git).
ru-pipeline = [
    "audiogear[brouhaha,pitch,mos,asr,diarization,ru]",
]

[tool.uv]
# gigaam pins onnxruntime==1.17.3, but that wheel's native lib fails to load on
# glibc 2.39 (and only torchmetrics.dnsmos imports it, which we don't use).
# Force a working build across all extras.
override-dependencies = ["onnxruntime>=1.19"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# tests import shared helpers from tests/conftest.py by name (e.g. `from conftest
# import ...`); keep the tests dir importable.
addopts = "-q"

[tool.ruff]
line-length = 119
target-version = "py310"

[tool.ruff.lint]
ignore = [
    "C901", # function too complex
    "E501", # line length (handled by formatter)
]
select = ["C", "E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
